[gd_scene load_steps=26 format=2]

[ext_resource path="res://Interfaces/controls/S.png" type="Texture" id=1]
[ext_resource path="res://Interfaces/controls/D.png" type="Texture" id=2]
[ext_resource path="res://Interfaces/controls/A.png" type="Texture" id=3]
[ext_resource path="res://Interfaces/controls/W.png" type="Texture" id=4]
[ext_resource path="res://Scripts/UI/Controllers.gd" type="Script" id=5]
[ext_resource path="res://Interfaces/controls/SPACE.png" type="Texture" id=6]
[ext_resource path="res://Interfaces/controls/SHIFT.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 19, 21 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 19, 0, 19, 21 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 49, 21 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 49, 0, 49, 21 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 98, 21 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 98, 0, 98, 21 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 19, 21 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 19, 0, 19, 21 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 19, 21 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 19, 0, 19, 21 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 19, 21 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 19, 0, 19, 21 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Controllers" type="VBoxContainer"]
margin_right = 155.0
margin_bottom = 66.0
script = ExtResource( 5 )

[node name="KeyW" type="AnimatedSprite" parent="."]
position = Vector2( 59, 11.5 )
frames = SubResource( 9 )

[node name="KeyShift" type="AnimatedSprite" parent="."]
position = Vector2( 28.5, 54.5 )
frames = SubResource( 12 )

[node name="KeySpace" type="AnimatedSprite" parent="."]
position = Vector2( 104.5, 54.5 )
frames = SubResource( 15 )

[node name="KeyS" type="AnimatedSprite" parent="."]
position = Vector2( 59.5, 32 )
frames = SubResource( 6 )

[node name="KeyD" type="AnimatedSprite" parent="."]
position = Vector2( 79.5, 32 )
frames = SubResource( 18 )

[node name="KeyA" type="AnimatedSprite" parent="."]
position = Vector2( 39.5, 32 )
frames = SubResource( 3 )

[connection signal="animation_finished" from="KeyW" to="." method="_on_KeyW_animation_finished"]
[connection signal="animation_finished" from="KeyShift" to="." method="_on_KeyShift_animation_finished"]
[connection signal="animation_finished" from="KeySpace" to="." method="_on_KeySpace_animation_finished"]
[connection signal="animation_finished" from="KeyS" to="." method="_on_KeyS_animation_finished"]
[connection signal="animation_finished" from="KeyD" to="." method="_on_KeyD_animation_finished"]
[connection signal="animation_finished" from="KeyA" to="." method="_on_KeyA_animation_finished"]
